--- a/index.html
+++ b/index.html
@@ -3,14 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Resume Template</title>
+    <style>
+
+    </style>
 </head>
-<title></title>
-<link rel="stylesheet" href="">
 <body>
-    <h1>SAEPULLOH</h1>
-    <P>Junior Frontend</P>
-    <h3></h3>
-    <p></p>
+    <div class="container">
+        <h1>Your Name</h1>
+        <h2>Junior Frontend Developer</h2>
+        
+        <div class="contact-info">
+            <p>123 Your Street</p>
+            <p>Your City, ST 12345</p>
+            <p>(123) 456-7890</p>
+            <p>no.reply@example.com</p>
+        </div>
+
+        <div class="skills">
+            <p class="section-title">Skills</p>
+            <ul>
+                <li>HTML, CSS, JavaScript</li>
+                <li>Accessibility</li>
+                <li>Figma to Design</li>
+                <li>Responsive Web Design</li>
+                <li>Technical Writing</li>
+                <li>Presentation</li>
+            </ul>
+        </div>
+
+        <div class="education">
+            <p class="section-title">Education</p>
+            <p>School Name, Location - Degree</p>
+            <p>Month 20xx to Month 20xx</p>
+            <p>List of exciting things you did at university</p>
+        </div>
+
+        <div class="experience">
+            <p class="section-title">Experience</p>
+
+            <p>Company Name, Location - Job Title</p>
+            <p>Month 20xx to Month 20xx</p>
+            <ul>
+                <li>List of achievements</li>
+                <li>List of achievements</li>
+                <li>List of achievements</li>
+            </ul>
+            <p>Skills: List of skills used or gained at this company</p>
+
+            <p>Company Name, Location - Job Title</p>
+            <p>Month 20xx to Month 20xx</p>
+            <ul>
+                <li>List of achievements</li>
+                <li>List of achievements</li>
+                <li>List of achievements</li>
+            </ul>
+            <p>Skills: List of skills used or gained at this company</p>
+        </div>
+
+        <div class="links">
+            <p class="section-title">Across the Internet</p>
+            <p>Add your LinkedIn, GitHub profile links</p>
+        </div>
+    </div>
 </body>
 </html>
