--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <div class="container">
-        <h1>Your Name</h1>
+        <h1>Saepulloh</h1>
         <h2>Junior Frontend Developer</h2>
         
         <div class="contact-info">
             <p>123 Your Street</p>
             <p>Your City, ST 12345</p>
             <p>(123) 456-7890</p>
-            <p>no.reply@example.com</p>
+            <p>Saepulloh@gmail.com</p>
         </div>
 
         <div class="skills">
